Scrollbar style fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,9 @@
 }
 
 html {
-    box-sizing: border-box
+    box-sizing: border-box;
+    scrollbar-color: var(--col-lowlight) var(--col-secondary);
+    scrollbar-width: thin;
 }
 
 *,* :before,* :after {
@@ -77,8 +79,6 @@ body {
     background-repeat: no-repeat;
     background-image: linear-gradient(162deg, var(--col-highlight), 10rem, var(--col-primary) 30rem);
     -ms-overflow-style: -ms-autohiding-scrollbar;
-    scrollbar-color: var(--col-lowlight) var(--col-secondary);
-    scrollbar-width: thin
 }
 
 @supports (padding: max(0px)) {
